<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_search"
            android:enabled="false"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_export"
            android:enabled="false"
            android:icon="@drawable/ic_export"
            android:title="@string/nav_export" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>
</menu>
